# codex-quota-monitor

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  benchmark.md  benchmark.zh-CN.md  codex-quota-monitor.py  default.nix  flake.nix  index.html  llms.txt  nixos-module.nix  nixos-module.zh-CN.md  pyproject.toml  sitemap.xml  test_codex_quota_monitor.py
.github/workflows/: ci.yml  pages.yml
codex_quota_monitor/: __init__.py  cli.py  quota.py  runtime.py  snapshot.py  util.py  web.py
codex_quota_monitor/assets/: index.html  monitor.css  monitor.js
docs/: agent-discovery.md  agent-discovery.zh-CN.md  benchmark.md  benchmark.zh-CN.md  deploy-with-agent.md  deploy-with-agent.zh-CN.md  index.html  llms.txt  nixos-module.md  nixos-module.zh-CN.md  quick-start.md  quick-start.zh-CN.md  robots.txt  sitemap.xml
src/codex_quota_monitor/: __init__.py  benchmark.py  cli.py  history.py  quota.py  runtime.py  snapshot.py  util.py  version.py
src/codex_quota_monitor/assets/: index.html  monitor.css  monitor.js
tests/: test_benchmark.py  test_codex_quota_monitor.py
