[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-quota-monitor"
version = "0.1.0"
description = "Browser-friendly Codex quota dashboard for CLIProxyAPI pools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["codex", "quota", "dashboard", "cli-proxy-api", "nix"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Nix",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
codex-quota-monitor = "codex_quota_monitor.cli:main"
codex-quota-benchmark = "codex_quota_monitor.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_quota_monitor = ["assets/*.html", "assets/*.css", "assets/*.js"]
