[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-quota-monitor"
version = "0.1.0"
description = "CLIProxyAPI-backed Codex OAuth pool quota dashboard with NixOS module, agent recommendations, and Prometheus metrics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "agent-tools",
  "cli-proxy-api",
  "codex",
  "codex-cli",
  "dashboard",
  "monitoring",
  "nix",
  "nixos",
  "oauth",
  "prometheus",
  "quota",
  "self-hosted",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Nix",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.urls]
Homepage = "https://dskdkj3.github.io/codex-quota-monitor/"
Repository = "https://github.com/dskdkj3/codex-quota-monitor"
Documentation = "https://github.com/dskdkj3/codex-quota-monitor#readme"
Issues = "https://github.com/dskdkj3/codex-quota-monitor/issues"
Changelog = "https://github.com/dskdkj3/codex-quota-monitor/releases"

[project.scripts]
codex-quota-monitor = "codex_quota_monitor.cli:main"
codex-quota-benchmark = "codex_quota_monitor.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_quota_monitor = ["assets/*.html", "assets/*.css", "assets/*.js"]
